--- a/app/src/main/resources/application.yml
+++ b/app/src/main/resources/application.yml
@@ -1,9 +1,17 @@
 spring:
   datasource:
-    url: jdbc:postgresql://localhost:5432/memo_db
+    url: jdbc:postgresql://localhost:5432/postgres
     username: postgres
     password: 123456
+    driver-class-name: org.postgresql.Driver
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     show-sql: true
+    properties:
+      hibernate:
+        format_sql: true
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+  sql:
+    init:
+      mode: never
