--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -13,7 +13,6 @@ on:
 permissions:
   actions: write
   contents: write
-  issues: none
   pull-requests: write
   packages: write
 
@@ -37,6 +36,14 @@ jobs:
 
       - name: Grant execute permission for Gradle
         run: chmod +x ./gradlew
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v4
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
 
       - name: Build with Gradle
         run: ./gradlew clean build
@@ -76,9 +83,9 @@ jobs:
             -e POSTGRES_PASSWORD=123456 \
             -e POSTGRES_DB=postgres \
             --restart always \
-            postgres                                 # 컨테이너 간 DNS 해석로 psql 호스트 사용 :contentReference[oaicite:1]{index=1}
+            postgres   
 
-      - name: Pull and run Kotlin app (stage)
+      - name: Pull and run Kotlin app (st                   age)
         run: |
           docker pull ${{ env.DOCKER_IMAGE }}:stage-latest
           docker stop kotlin-app-stage || true
@@ -109,6 +116,13 @@ jobs:
 
       - name: Grant execute permission for Gradle
         run: chmod +x ./gradlew
+
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v4
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build with Gradle
         run: ./gradlew clean build
