--- a/Dockerfile-prod
+++ b/Dockerfile-prod
@@ -13,12 +13,12 @@ ENV SERVER_PORT=8080
 RUN groupadd --system spring \
     && useradd  --system --create-home --gid spring --home-dir /home/spring spring
 
-    USER spring:spring
+USER spring:spring
 
 # 포트 노출
-EXPOSE 8080
-EXPOSE 80
-EXPOSE 88
+# EXPOSE 8080
+# EXPOSE 80
+# EXPOSE 88
 EXPOSE 433
 
 # 애플리케이션 실행
